--- a/lecture8/lab8/trivia/index.html
+++ b/lecture8/lab8/trivia/index.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
         <title>Trivia!</title>
+        <meta charset="UTF-8">
         <script>
             // TODO: Add code to check answers to questions
         </script>
@@ -18,12 +19,20 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
+                <h3>O que entra mole e sai duro?</h3>
+                <button>Macarrão</button>
+                <button>Chevrolet Astra SS 2.0 2008</button>
+                <button>Polvo</button>
+                <button>Alicate</button>
                 <!-- TODO: Add multiple choice question here -->
             </div>
 
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
+                <h3>Qual seu nome, vamos identificarmos você e te autuar como crinoso, caso a resposta acima esteja incorreta:</h3>
+                <input type="text">
+                <button>Enviar</button>
                 <!-- TODO: Add free response question here -->
             </div>
         </div>
