--- a/lecture8/lab8/trivia/index.html
+++ b/lecture8/lab8/trivia/index.html
@@ -30,7 +30,7 @@
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <h3>Qual seu nome, vamos identificarmos você e te autuar como crinoso, caso a resposta acima esteja incorreta:</h3>
+                <h3>Qual seu nome? Vamos identificar você e se a resposta acima estiver errada meia noite te conto</h3>
                 <input type="text">
                 <button>Enviar</button>
                 <!-- TODO: Add free response question here -->
