--- a/lecture8/lab8/trivia/index.html
+++ b/lecture8/lab8/trivia/index.html
@@ -8,8 +8,8 @@
         <meta charset="UTF-8">
         <script>
             // TODO: Add code to check answers to questions
-            function selected(position, bool) {
-                let button = document.querySelectorAll('.answer');
+            function selected(position, bool, question) {
+                let button = document.querySelectorAll(`#${question} .answer`);
                 if (bool == false) {
                     for (let i = 0; i < button.length; i++) {
                         button[i].style.backgroundColor = '#d9edff';
@@ -49,12 +49,22 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
-                <h3>A palavra "café" vem do árabe qahhwah e significa: </h3>
-                <p id="isCorrect1"></p>
-                <button class="answer" onclick="selected(0, false);">Nascer do sol</button>
-                <button class="answer" onclick="selected(1, false);">Despertar</button>
-                <button class="answer" onclick="selected(2, true);">Vinho</button>
-                <button class="answer" onclick="selected(3, false);">Olhos</button>
+                <div id="question1">
+                    <h3>A palavra "café" vem do árabe qahhwah e significa: </h3>
+                    <p id="isCorrect1"></p>
+                    <button class="answer" onclick="selected(0, false, 'question1');">Nascer do sol</button>
+                    <button class="answer" onclick="selected(1, false, 'question1');">Despertar</button>
+                    <button class="answer" onclick="selected(2, true, 'question1');">Vinho</button>
+                    <button class="answer" onclick="selected(3, false, 'question1');">Olhos</button>
+                </div>
+                <div id="question2">
+                    <h3>A palavra "café" vem do árabe qahhwah e significa: </h3>
+                    <p id="isCorrect1"></p>
+                    <button class="answer" onclick="selected(0, false, 'question2');">Nascer do sol</button>
+                    <button class="answer" onclick="selected(1, false, 'question2');">Despertar</button>
+                    <button class="answer" onclick="selected(2, true, 'question2');">Vinho</button>
+                    <button class="answer" onclick="selected(3, false, 'question2');">Olhos</button>
+                </div>
                 <!-- TODO: Add multiple choice question here -->
             </div>
 
