--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -7,7 +7,34 @@
         <link href="styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
-    <body>
-        hello, homepage
+    <body class="text-center">
+
+        <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+            <header class="masthead mb-auto">
+                <div class="navbar navbar-light bg-light">
+                    <a class="navbar-brand" href="#">
+                        <img src="./braces.svg" alt="Braces" width="34">
+                        valentejorge
+                    </a>
+                    <nav class="nav nav-masthead justify-content-center">
+                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#">Contact</a>
+                    </nav>
+                </div>
+            </header>
+
+            <main>
+                <p>hellomain</p>
+
+            </main>
+
+            <footer>
+                <p>hellofooter</p>
+
+            </footer>
+        </div>
     </body>
+
 </html>
