--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -42,11 +42,21 @@
         <main>
             <div class="container d-flex align-items-center justify-content-center">
                 <div class="row">
-                    <div class="col-md-6 text-center">
+                    <div class="col-md-6 text-center justify-content-center">
                         <h2 class="title mb-6">I am Jorge Valente Jr.</h2>
                         <p class="text">Computer Science Student at OSSU</p>
+                        <div class="d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark d-flex align-items-center" style="margin: 0.5rem;">
+                                <img src="./linkedin.svg" alt="" class="invert-img">
+                                <span style="margin-left: 0.5rem;">Linkedin</span>
+                            </button>
+                            <button type="button" class="btn btn-dark d-flex align-items-center" style="margin: 0.5rem;">
+                                <img src="./linkedin.svg" alt="" class="invert-img">
+                                <span style="margin-left: 0.5rem;">Linkedin</span>
+                            </button>
+                        </div>
                     </div>
-                    <div class="col-md-6 justify-content-start">
+                    <div class="col-md-6 text-center">
                         <img src="./person-circle.svg" width="150px"alt="">
                     </div>
                 </div>
