--- a/lecture8/pset8/homepage/about.html
+++ b/lecture8/pset8/homepage/about.html
@@ -42,30 +42,13 @@
 
         <main>
             <div class="container align-items-center justify-content-center mt-5 px-5">
-                    <div class="row g-1 py-2 flex-lg-row-reverse">
-                    <div class="col-md-6 text-center">
-                        <img src="./person-circle.svg" width="150px" alt="" style="margin-bottom:1.5rem; margin-top:1.5rem;">
+                <div class="row g-1 py-2">
+                    <div class="col-md-12 text-center">
+                        <h2 class="display-5 fw-bold lh-1 mb-3">About me</h2>
                     </div>
-                    <div class="col-md-6 text-center align-self-center mx-auto" style="margin-top:1.5rem;">
-                        <h2 class="display-5 fw-bold lh-1 mb-3">I am Jorge Valente Jr.</h2>
-                        <p class="text mb-6 fs-5">Computer Science Student at OSSU</p>
-                    </div>
+                        <p class="text">Im very cool guy ok</p>
                 </div>
             </div>
-            <div class="d-flex justify-content-center">
-                <div>
-                <button type="button" class="btn btn-dark d-flex align-items-center btn-block" onclick="window.open('https://linkedin.com/in/valentejorge', '_blank');" style="margin: 0.2rem; width:120px">
-                    <img src="./linkedin.svg" alt="" class="invert-img">
-                    <span class="span-button">Linkedin</span>
-                </button>
-
-                </div>
-                <div>
-                <button type="button" class="btn btn-dark d-flex align-items-center btn-block" onclick="window.open('https://github.com/valentejorge', '_blank');" style="margin: 0.2rem; width:120px">
-                    <img src="./github.svg" alt="" class="invert-img">
-                    <span class="span-button">Github  </span>
-                </button>
-                </div>
 
             </div>
 
