--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="./braces.svg" alt="Braces" width="34">
+                        <img src="assets/braces.svg" alt="Braces" width="34">
                         valentejorge
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                                 <a class="nav-link" href="./about.html">about</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">projects</a>
+                                <a class="nav-link" href="./projects.html">projects</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">contact</a>
@@ -44,7 +44,7 @@
             <div class="container align-items-center justify-content-center mt-5 px-5">
                     <div class="row g-1 py-2 flex-lg-row-reverse">
                     <div class="col-md-6 text-center">
-                        <img src="./person-circle.svg" width="150px" alt="" style="margin-bottom:1.5rem; margin-top:1.5rem;">
+                        <img src="assets/person-circle.svg" width="150px" alt="" style="margin-bottom:1.5rem; margin-top:1.5rem;">
                     </div>
                     <div class="col-md-6 text-center align-self-center mx-auto" style="margin-top:1.5rem;">
                         <h2 class="display-5 fw-bold lh-1 mb-3">I am Jorge Valente Jr.</h2>
@@ -55,14 +55,14 @@
             <div class="d-flex justify-content-center">
                 <div>
                 <button type="button" class="btn btn-dark d-flex align-items-center btn-block" onclick="window.open('https://linkedin.com/in/valentejorge', '_blank');" style="margin: 0.2rem; width:120px">
-                    <img src="./linkedin.svg" alt="" class="invert-img">
+                    <img src="assets/linkedin.svg" alt="" class="invert-img">
                     <span class="span-button">Linkedin</span>
                 </button>
 
                 </div>
                 <div>
                 <button type="button" class="btn btn-dark d-flex align-items-center btn-block" onclick="window.open('https://github.com/valentejorge', '_blank');" style="margin: 0.2rem; width:120px">
-                    <img src="./github.svg" alt="" class="invert-img">
+                    <img src="assets/github.svg" alt="" class="invert-img">
                     <span class="span-button">Github  </span>
                 </button>
                 </div>
