--- a/lecture8/pset8/homepage/projects.html
+++ b/lecture8/pset8/homepage/projects.html
@@ -42,11 +42,40 @@
 
         <main>
             <div class="container align-items-center justify-content-center mt-5 px-5">
-                <div class="row g-1 py-2">
+                <div class="row g-1 py-2 text-center">
                     <div class="col-md-12 text-center">
-                        <h2 class="display-5 fw-bold lh-1 mb-3">About me</h2>
+                        <h2 class="display-5 fw-bold lh-1 mb-3">Projects</h2>
                     </div>
-                        <p class="text">Im very cool guy ok</p>
+                    <div class="col-md-4 text-center">
+                        <div class="card border-light" style="width: 18rem;">
+                            <img src="/assets/braces.svg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="card border-light" style="width: 18rem;">
+                            <img src="/assets/braces.svg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="card border-light" style="width: 18rem;">
+                            <img src="/assets/braces.svg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
