--- a/lecture8/pset8/homepage/about.html
+++ b/lecture8/pset8/homepage/about.html
@@ -12,7 +12,7 @@
         <header class="header mt-2">
             <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
                         valentejorge
                     </a>
@@ -21,17 +21,17 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link active" href="./index.html">home</a>
-                            </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./about.html">about</a>
+                                <a class="nav-link" href="./index.html">home</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link active" href="./about.html">about</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./projects.html">projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">contact</a>
+                                <a class="nav-link" href="./contact.html">contact</a>
                             </li>
                         </ul>		  
                     </div>
