--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -12,7 +12,7 @@
         <header class="header mt-2">
             <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
                         valentejorge
                     </a>
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="./projects.html">projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">contact</a>
+                                <a class="nav-link" href="./contact.html">contact</a>
                             </li>
                         </ul>		  
                     </div>
