--- a/lecture8/pset8/homepage/projects.html
+++ b/lecture8/pset8/homepage/projects.html
@@ -12,7 +12,7 @@
         <header class="header mt-2">
             <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
                         valentejorge
                     </a>
@@ -21,17 +21,17 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link active" href="./index.html">home</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./index.html">home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./about.html">about</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./projects.html">projects</a>
+                            <li class="nav-item active">
+                                <a class="nav-link active" href="./projects.html">projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">contact</a>
+                                <a class="nav-link" href="./contact.html">contact</a>
                             </li>
                         </ul>		  
                     </div>
@@ -47,7 +47,7 @@
                         <h2 class="display-5 fw-bold lh-1 mb-3">Projects</h2>
                     </div>
                     <div class="col-md-4 text-center">
-                        <div class="card border-light" style="width: 18rem;">
+                        <div class="card border-light">
                             <img src="/assets/braces.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
-                        <div class="card border-light" style="width: 18rem;">
+                        <div class="card border-light">
                             <img src="/assets/braces.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
-                        <div class="card border-light" style="width: 18rem;">
+                        <div class="card border-light">
                             <img src="/assets/braces.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            </div>
+            <div class="mb-5" style="height:100px"></div>
 
         </main>
         <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
