--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -66,6 +66,7 @@
                     <span class="span-button">Github  </span>
                 </button>
                 </div>
+                <div class="mb-5" style="height:100px"></div>
 
             </div>
 
