--- a/lecture8/pset8/homepage/contact.html
+++ b/lecture8/pset8/homepage/contact.html
@@ -115,12 +115,16 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-primary mb-5 mt-2" type="submit" >Send</button>
+                        <button class="btn btn-primary mb-5 mt-2" onclick="confirmed();" type="submit" >Send</button>
                         <div class="mb-5" style="height:100px"></div>
                     </form>
 
                     <script>
                         // Exemplo de JavaScript inicial para desativar envios de formulário, se houver campos inválidos.
+                        function confirmed() {
+
+                        };
+
                         (function() {
                             'use strict';
                             window.addEventListener('load', function() {
@@ -132,6 +136,9 @@
                                         if (form.checkValidity() === false) {
                                             event.preventDefault();
                                             event.stopPropagation();
+                                        }
+                                        else {
+                                            alert('a beautiful modal ok');
                                         }
                                         form.classList.add('was-validated');
                                     }, false);
